# soulwars

./: LICENSE.txt  README.md  docker-compose.yaml
backend/: .env.example  Dockerfile.dev  README.md  bun.lockb  package.json
backend/src/: env.ts  handle-connection.ts  index.ts  production-network-waiter.ts  socket-type.ts
backend/src/auth/: middleware.ts  session.ts
backend/src/db/: index.ts  schema.ts
backend/src/protos/: matchmaking.ts
backend/src/queues/: index.ts
game-engine/: Cargo.toml
game-engine/lua/cards/: 1.lua
game-engine/lua/definitions/: card.lua  card_type.lua  cards.lua  field_slot.lua  game.lua
game-engine/src/: card.rs  card_data.rs  card_script.rs  card_storage.rs  card_type.rs  card_wrapper.rs  engine.rs  event_handler.rs  field.rs  field_slot.rs  game.rs  lib.rs  player.rs
game-engine/src/event_handler/: debug.rs  mod.rs
game-server/: Cargo.toml
game-server/src/: main.rs  user_state.rs
game-server/src/engine/: event_handler.rs  mod.rs  server_event_handler.rs
game-server/src/game/: mod.rs
game-server/src/handlers/: connection.rs  game.rs  info.rs  mod.rs
game-server/src/state/: game_state.rs  mod.rs  partial_game_state.rs  user_state.rs
matchmaking/: Dockerfile.dev  generateProto.sh  go.mod  go.sum  main.go  readme.md
matchmaking/pkg/db/: db.go
protobuf/: README.md  matchmaking.proto
web/: .dockerignore  Dockerfile.dev  bun.lockb  drizzle.config.ts  package.json  prettier.config.js  svelte.config.js  tailwind.config.ts
web/src/: app.d.ts  app.html  app.postcss  hooks.server.ts
web/src/routes/: +layout.svelte  (+2 more)
(+64 files in other folders)
